pushing to merge

--- a/views/about.hbs
+++ b/views/about.hbs
@@ -278,8 +278,8 @@
                             <section class="biotext">
                               <h1 class="text-left text-xl font-medium mb-1 -mt-2">Eagle Wu</h1>
                               <hr>
-                              <h5 class="text-left text-sm">Enterpreneurship @Babson College</h5>
-                              <h5 class="text-left text-sm">Winner, Money 20/20 Hackathon</h5>
+                              <h5 class="text-left text-xs">Enterpreneurship @Babson College</h5>
+                              <h5 class="text-left text-xs">Winner, Money 20/20 Hackathon</h5>
                               <hr class="mb-3">
                               <div class="hidden-text-team overflow-x-auto">
                                   <p class="text-left  text-sm ">
@@ -300,8 +300,8 @@
                             <section class="biotext">
                               <h1 class="text-left text-xl font-medium mb-1 -mt-2">Tim Clancy</h1>
                               <hr>
-                              <h5 class="text-left text-sm">Computer Science, MS @UPenn</h5>
-                              <h5 class="text-left text-sm">Lead Developer, Salad Blockchain</h5>
+                              <h5 class="text-left text-xs">Computer Science, MS @UPenn</h5>
+                              <h5 class="text-left text-xs">Lead Developer, Salad Blockchain</h5>
                               <hr class="mb-3">
                               <div class="hidden-text-team overflow-x-auto">
                                   <p class="text-left  text-sm ">
@@ -324,8 +324,8 @@
                               <section class="biotext">
                                 <h1 class="text-left text-xl font-medium mb-1 -mt-2">Liam Clancy</h1>
                                 <hr>
-                                <h5 class="text-left text-sm">Computer Science @Boston University</h5>
-                                <h5 class="text-left text-sm"></h5>
+                                <h5 class="text-left text-xs">Computer Science @Boston University</h5>
+                                <h5 class="text-left text-xs"></h5>
                                 <hr class="bio-hr mb-3">
                                 <div class="hidden-text-team overflow-x-auto">
                                     <p class="text-left  text-sm ">
@@ -347,8 +347,8 @@
                             <section class="biotext">
                               <h1 class="text-left text-xl font-medium mb-1 -mt-2">Matthew Oh</h1>
                               <hr>
-                              <h5 class="text-left text-sm">Economics @Tuft University</h5>
-                              <h5 class="text-left text-sm"></h5>
+                              <h5 class="text-left text-xs">Economics @Tuft University</h5>
+                              <h5 class="text-left text-xs"></h5>
                               <hr class="mb-3">
                               <div class="hidden-text-team overflow-x-auto">
                                   <p class="text-left  text-sm ">
@@ -368,8 +368,8 @@
                             <section class="biotext">
                               <h1 class="text-left text-xl font-medium mb-1 -mt-2">Sloan Poelman</h1>
                               <hr>
-                              <h5 class="text-left text-sm">Graduate @BYU</h5>
-                              <h5 class="text-left text-sm">2x BYU Animation Award Winner</h5>
+                              <h5 class="text-left text-xs">Graduate @BYU</h5>
+                              <h5 class="text-left text-xs">2x BYU Animation Award Winner</h5>
                               <hr class="mb-3">
                               <div class="hidden-text-team overflow-x-auto">
                                   <p class="text-left  text-sm ">
@@ -392,8 +392,8 @@
                             <section class="biotext">
                               <h1 class="text-left text-xl font-medium mb-1 -mt-2">Laura Prados-Bacó</h1>
                               <hr>
-                              <h5 class="text-left text-sm  mb-1">Studying @Babson College</h5>
-                              <h5 class="text-left text-sm  mb-1"></h5>
+                              <h5 class="text-left text-xs  mb-1">Studying @Babson College</h5>
+                              <h5 class="text-left text-xs  mb-1"></h5>
                               <hr class="mb-3">
                               <div class="hidden-text-team overflow-x-auto">
                                   <p class="text-left  text-sm ">
