remove toggle button

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -38,11 +38,11 @@
 	</head>
   <body>
 
-  	<div class="nav-container nav-transparent" style="min-height: 0 !important;">
+  	<!-- <div class="nav-container nav-transparent" style="min-height: 0 !important;">
         <nav id="barr" class="absolute transparent navbar-default" style="margin-bottom: 0; margin-top: -8px; ">
-         <div class="container-fluid" style="width: 100%; padding: 0px">
+         <div class="container-fluid" style="width: 100%; padding: 0px"> -->
     <!-- Brand and toggle get grouped for better mobile display -->
-		    <div class="container" style="width: 100%; padding: 0px">
+		    <!-- <div class="container" style="width: 100%; padding: 0px">
 			    <div class="col-md-12" style="border-bottom: solid 2px #FFF; height: 6em">
 				    <div class="navbar-header" style="padding-top: 3vh;">
 				      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -50,7 +50,7 @@
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>
 				        <span class="icon-bar"></span>
-				      </button>
+				      </button> -->
 
 
 				<!--       <a class="navbar-brand logoText" href="#" style="margin-top: 15px; margin-bottom: 2px; padding-left: 0px; font-size: 1.3em !important">V I N C I</a> -->
@@ -67,7 +67,7 @@
 					  </a>
 					</nav> -->
 
-				    </div>
+				    <!-- </div> -->
 
 				    <!-- <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1" style="margin-top: 15px; color: #FFF !important;">
 
@@ -81,8 +81,8 @@
 
 				      </ul>
 				    </div><!-- /.navbar-collapse -->
-				</div>
-			</div>
+				<!-- </div>
+			</div> -->
 		</div>
 		</nav>
 	</div>
