Fixes from Eagle's edits - 1 and 2

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -17,3 +17,13 @@ body {
   border: 1px solid red;
   height: 200px;
 } */
+
+
+.tres-footer {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  /* width: 100%; */
+  background-color: RGBA(25, 25, 25, 0.7);
+}
