--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- css link -->
-    <!-- <link rel="stylesheet" href="../public/css/index.css"> -->
+    <link rel="stylesheet" href="../public/css/index.css">
     <link rel="stylesheet" href="../public/css/output-styles.css">
     <link rel="stylesheet" href="../public/css/panels.css">
     <link rel="stylesheet" href="../public/css/mobile.css">
@@ -414,10 +414,10 @@
                  </div>
                </div>
              </div>
-             <div class="bg-gray-200">
-               <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
+             <div class="tres-footer">
+               <div class="container mx-auto py-8 px-5 flex flex-wrap flex-col sm:flex-row">
                  <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 VINCI-VR —
-                   <a href="" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@tresstudios</a>
+                   <a href="http://www.tresstudios.dev/" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@tresstudios</a>
                  </p>
                  <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
                    <a class="text-gray-500">
@@ -925,5 +925,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <script src ="../public/js/indexnew.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" ></script>
+
   </body>
 </html>
