--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,7 +4,7 @@
 	    <meta charset="utf-8">
 	    <title>VINCI</title>
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
 
 	    <!-- <link href="css/themify-icons.css" rel="stylesheet" type="text/css" media="all" />
 	    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
@@ -13,7 +13,7 @@
 	    <link href="css/custom2.css" rel="stylesheet" type="text/css" media="all" />
 	    <link href='http://fonts.googleapis.com/css?family=Lato:300,400%7CRaleway:100,400,300,500,600,700%7COpen+Sans:400,500,600' rel='stylesheet' type='text/css'> -->
 
-	    <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
+	    <!-- <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
 	    <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
 	    <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
 	    <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
@@ -29,12 +29,12 @@
 	    <link rel="manifest" href="/manifest.json">
 	    <meta name="msapplication-TileColor" content="#ffffff">
 	    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-	    <meta name="theme-color" content="#ffffff">
+	    <meta name="theme-color" content="#ffffff"> -->
 
 		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
-	    <script src="/js/FileSaver.js"></script>
+	    <script src="/js/FileSaver.js"></script> -->
 	</head>
   <body>
 
