--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -53,7 +53,7 @@
               <hr class="mt-4 w-1/3 mx-auto">
             </h3>
             <br>
-             <h1 class="font-sans font-bold -mb-20 -mt-6 text-2xl md:text-4xl"> WITH A WORLD OF YOUR OWN
+             <h1 class="font-sans font-bold -mb-20 -mt-6 xl:text-6xl text-2xl md:text-2xl lg:text-lg "> WITH A WORLD OF YOUR OWN
               <hr class=" w-1/3 mx-auto mb-10">
             </h1>
            <h3 class="font-sans pt-12 sm:my-8 sm:text-xl md:text-xl xlg:text-2xl ">Create, Analyze, and Train in <b class="bold">Virtual Reality</b></h3>
@@ -412,31 +412,6 @@
                      </li>
                    </nav>
                  </div>
-               </div>
-             </div>
-             <div class="bg-gray-200">
-               <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-                 <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 VINCI-VR —
-                   <a href="" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@tresstudios</a>
-                 </p>
-                 <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
-                   <a class="text-gray-500">
-                     <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                       <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
-                     </svg>
-                   </a>
-                   <a class="ml-3 text-gray-500">
-                     <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                       <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
-                     </svg>
-                   </a>
-                   <a class="ml-3 text-gray-500">
-                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                       <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
-                       <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
-                     </svg>
-                   </a>
-                 </span>
                </div>
              </div>
            </footer>
@@ -845,7 +820,7 @@
 
         <section class="bg-secondary panel">
            <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
-             <h1 class ="text-primary text-center font-medium text-3xl font-sans">Want to Learn More About VR Training?</h1>
+             <h1 class ="text-primary text-center font-medium text-3xl font-sans lg:-mb-32">Want to Learn More About VR Training?</h1>
              <div class="flex flex-col justify-center mt-24">
                 <a class="flex flex-col justify-center" href="/blogs">
                   <button class="w-2/3 md:w-1/5 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-sm">Check Out Our Blogs</button>
@@ -885,31 +860,7 @@
                  </div>
                </div>
              </div>
-             <div class="bg-gray-200">
-               <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-                 <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 VINCI-VR —
-                   <a href="" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@tresstudios</a>
-                 </p>
-                 <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
-                   <a class="text-gray-500">
-                     <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                       <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
-                     </svg>
-                   </a>
-                   <a class="ml-3 text-gray-500">
-                     <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                       <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
-                     </svg>
-                   </a>
-                   <a class="ml-3 text-gray-500">
-                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-                       <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
-                       <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
-                     </svg>
-                   </a>
-                 </span>
-               </div>
-             </div>
+
            </footer>
         </section>
       </section>
