--- a/views/careers.hbs
+++ b/views/careers.hbs
@@ -51,18 +51,18 @@
 
         <!--================== CAREERS INFO SECTION ==================-->
         <section class="panel bg-secondary h-full">
-          <section class="bg-secondary text-2xl sm:p-12 overflow-auto">
+          <section class="bg-secondary text-2xl sm:p-12 overflow-auto infoBlock">
               <h1 class="text-left text-4xl font-medium p-4 font-sans">Join Our Team
-                <hr class="mt-4 w-1/4 py-2 mb-20">
+                <hr class="mt-12 w-1/4 py-2 md:mb-20">
               </h1>
-              <section class="bg-secondary -mt-20 m-4 p-2 grid grid-cols-3 border">
+              <section class="bg-secondary my-auto p-4 grid grid-cols-3 border">
                 <h3 class="w-1/3 col-span-1">Position</h3>
                 <h3 class="w-1/3 col-span-1">Type</h3>
                 <h3 class="w-1/3 col-span-1">Location</h3>
                 <details class="col-span-3 bg-secondary" closed>
                   <summary>Business Development - Internship - Boston, MA</summary>
                   <h4>Business Development Internship</h4>
-                  <p class="text-base" style="color:#7C7C7C;">
+                  <p class="" style="color:#7C7C7C;">
                     VINCI is looking to expand its presence and increase deal flow with its target industries.
                   </p>
                   <p style="color:#7C7C7C;">
@@ -256,7 +256,7 @@
        </section>
 
        <section class="panel hero-img text-2xl">
-         
+
          <hr class="-mt-4">
          <style media="screen">
            h1, h2, h3, h4, h5, h6 {
@@ -278,11 +278,11 @@
 
   <!--================== CAREERS INFO SECTION ==================-->
        <section class="panel bg-secondary h-full">
-         <section class="bg-secondary text-2xl sm:p-12 overflow-x-auto">
-             <h1 class="text-4xl font-bold p-4 font-sans">Join Our Team
-               <hr class="mt-4 w-1/4 py-2 mb-20">
+         <section class="bg-secondary text-2xl sm:p-12 mx-4 overflow-x-auto">
+             <h1 class="mt-12 text-4xl font-bold p-4 font-sans">Join Our Team
+               <hr class="mt-6 w-1/4 py-2 mb-20">
              </h1>
-             <section class="bg-secondary grid grid-cols-3 border">
+             <section class="bg-secondary grid grid-cols-3 border flex items-center">
                <h3 class="w-1/3 col-span-1">Position</h3>
                <h3 class="w-1/3 col-span-1">Type</h3>
                <h3 class="w-1/3 col-span-1">Location</h3>
