--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -22,10 +22,10 @@
         <section class="hero-section panel text-center h-screen w-full">
           <header class="text-gray-700 body-font">
               <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center ">
-                <a href="/" class="flex items-center mb-4 md:mb-0  z-10">
-                  <img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
+                <a href="/" class="flex items-center mb-4 md:mb-0 xl:-mb-8  z-10">
+                  <img class="w-1/6 -mt-2 xl:w-1/4 xl:mt-2" src="../public/img/vinci-logo.png" alt="">
                 </a>
-                <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
+                <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg xl:text-3xl font-semibold">
                   <a href="/about" class="mr-5 hover:text-gray-900">About</a>
                   <a href="/services" class="mr-5 hover:text-gray-900">Solutions</a>
                   <a href="/partners" class="mr-5 hover:text-gray-900">Partners</a>
@@ -48,19 +48,19 @@
           <video class="bg-video object-cover overflow-hidden" autoplay muted loop style="position: absolute; top: 0; left: 0; min-width: 100%; min-height: 100%; z-index:-1;">
               <source src="../public/video/background2.mp4" type="video/mp4">
           </video>
-          <section class="font-sans hero-text w-full p-4 absolute z-1 sm:mt-32 md:mt-40 ">
-            <h3 class="font-sans sm:text-xl md:text-xl xlg:text-2xl"> PREPARE FOR THE REAL WORLD
+          <section class="font-sans hero-text w-full p-4 absolute z-1 sm:mt-32 md:mt-40 lg: xl:mt-64 ">
+            <h3 class="font-sans sm:text-xl md:text-xl xl:text-3xl"> PREPARE FOR THE REAL WORLD
               <hr class="mt-4 w-1/3 mx-auto">
             </h3>
             <br>
-             <h1 class="font-sans font-bold -mb-20 -mt-6 xl:text-6xl text-2xl md:text-2xl lg:text-lg "> WITH A WORLD OF YOUR OWN
+             <h1 class="font-sans font-bold -mb-20 -mt-6 text-2xl md:text-2xl lg:text-3xl xl:text-5xl "> WITH A WORLD OF YOUR OWN
               <hr class=" w-1/3 mx-auto mb-10">
             </h1>
-           <h3 class="font-sans pt-12 sm:my-8 sm:text-xl md:text-xl xlg:text-2xl ">Create, Analyze, and Train in <b class="bold">Virtual Reality</b></h3>
+           <h3 class="font-sans pt-12 sm:my-8 sm:text-xl md:text-xl xl:text-3xl xl:mb-10">Create, Analyze, and Train in <b class="bold">Virtual Reality</b></h3>
     ​
-           <a id="learnMoreIntro" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-sm md:text-sm lg:text-sm" href="/services">Learn about our services</a>
+           <a id="learnMoreIntro" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-sm md:text-sm lg:text-base xl:text-xl" href="/services">Learn about our services</a>
     ​
-    ​       <p class="down-arrow text-4xl sm:my-12 md:my-32">⌄</p>
+    ​       <p class="down-arrow text-3xl xl:text-5xl sm:my-12 md:my-32">⌄</p>
           </section>
 
         </section>
@@ -69,22 +69,22 @@
       <!--==================  INTRO SECTION ==================-->
       <section class="panel bg-secondary">
           <section class="lg:flex mb-4 ">
-             <div class="w-3/5 ml-20 m-2 mt-16 p-6 pt-14">
-                 <h2 class ="text-primary font-medium text-3xl text-left tracking-wider font-sans">
+             <div class="w-3/5 ml-20 m-2 mt-16 xl:mt-40 p-6 pt-14">
+                 <h2 class ="text-primary font-medium text-3xl xl:text-4xl text-left tracking-wider font-sans">
                      Codex: A New Way to Train in VR
                  </h2>
                  <hr class="mt-4">
-                 <p class="text-primary text-left mt-6 tracking-widest leading-8">
+                 <p class="text-primary text-left mt-6 tracking-widest leading-8  xl:text-2xl">
                  Effective training requires expensive equipment, generates potential safety hazards, and elongates training time.
                   With Codex, teams can now improve their training by creating, training in and analyzing immersive VR simulations.
                   </p>
 
-                  <a id="learnMore" class="btn uppercase border p-4 hover:bg-red-700 hover:opacity-3 hover:text-gray-600 sm:text-sm lg:text-sm sm:ml-1 sm:-my-4 sm:block md:ml-1 md:mt-10 lg:ml-1 lg:mt-32"  style="width:40%;"  href="/services">
-                    <span class="text-center pl-8">LEARN MORE ABOUT CODEX </span>
+                  <a id="learnMore" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-sm lg:text-sm sm:ml-1 sm:-my-4 sm:block md:ml-1 md:mt-10 lg:ml-1 lg:mt-32 xl:mt-40"  style="width:50%;"  href="/services">
+                    <span class="text-center pl-8 xl:px-auto xl:text-xl">LEARN MORE ABOUT CODEX </span>
                   </a>
              </div>
              <div class="w-2/5 p-12">
-               <aside class="vr-img w-4/5 md:float-left lg:mt-20 -ml-10">
+               <aside class="vr-img w-4/5 md:float-left lg:mt-20 xl:mt-40 -ml-10">
                  <img src="../public/img/vr-goggles.png" alt="vr goggles" class="vr-goggles">
                </aside>
             </div>
@@ -97,7 +97,7 @@
          <section class="text-gray-700 body-font">
            <div class="container px-5 mt-16 mx-auto">
              <div class="text-center mb-20">
-               <h1 class=" text-4xl font-medium title-font text-gray-900 mb-4 text-primary">Why VINCI?</h1>
+               <h1 class=" text-3xl xl:text-4xl font-medium title-font text-gray-900 mb-4 text-primary">Why VINCI?</h1>
                <div class="flex mt-6 justify-center">
                  <div class="w-16 h-1 rounded-full bg-indigo-500 inline-flex"></div>
                </div>
@@ -109,10 +109,10 @@
                    <img src="../public/img/lightning.png" alt="">
                  </div>
                  <div class="flex-grow text-primary">
-                   <h2 class="text-gray-900 text-lg title-font font-medium mb-3 uppercase text-primary">Codex </h2>
-                   <p class="leading-relaxed text-base">
+                   <h2 class="text-gray-900 text-lg xl:text-3xl title-font font-medium mb-3 uppercase text-primary">Codex </h2>
+                   <p class="leading-relaxed text-base xl:text-2xl">
                      VINCI's flagship software, CODEX, enables instructors to rapidly create and edit their own training simulations.</p>
-                   <a href = "" class="mt-3 text-primary inline-flex items-center">Learn More
+                   <a href = "" class="mt-3 text-primary inline-flex items-center xl:text-2xl">Learn More
                      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                        <path d="M5 12h14M12 5l7 7-7 7"></path>
                      </svg>
@@ -125,9 +125,9 @@
                     <img class="object-fill" src="../public/img/affordable.png" alt="">
                  </div>
                  <div class="flex-grow text-primary">
-                   <h2 class="text-gray-900 text-lg title-font font-medium mb-3 text-primary">Low Cost</h2>
-                   <p class="leading-relaxed text-base">VINCI creates proprietary software and utilizes consumer hardware to lower the cost of creating and using VR.</p>
-                   <a href = "" class="mt-3 text-primary inline-flex items-center">Learn More
+                   <h2 class="text-gray-900 text-lg xl:text-3xl title-font font-medium mb-3 text-primary">Low Cost</h2>
+                   <p class="leading-relaxed text-base xl:text-2xl">VINCI creates proprietary software and utilizes consumer hardware to lower the cost of creating and using VR.</p>
+                   <a href = "" class="mt-3 text-primary inline-flex items-center xl:text-2xl">Learn More
                      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                        <path d="M5 12h14M12 5l7 7-7 7"></path>
                      </svg>
@@ -140,9 +140,9 @@
                     <img class="cover" src="../public/img/group.png" alt="">
                  </div>
                  <div class="flex-grow text-primary">
-                   <h2 class="text-gray-900 text-lg title-font font-medium mb-3 text-primary">Client Centric</h2>
-                   <p class="leading-relaxed text-base">VINCI’s partners take the front seat; by working closely with your workforce, we can build the best simulations.</p>
-                   <a href = "" class="mt-3 text-primary inline-flex items-center">Learn More
+                   <h2 class="text-gray-900 text-lg xl:text-3xl title-font font-medium mb-3 text-primary">Client Centric</h2>
+                   <p class="leading-relaxed text-base xl:text-2xl">VINCI’s partners take the front seat; by working closely with your workforce, we can build the best simulations.</p>
+                   <a href = "" class="mt-3 text-primary inline-flex items-center xl:text-2xl">Learn More
                      <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                        <path d="M5 12h14M12 5l7 7-7 7"></path>
                      </svg>
@@ -374,24 +374,24 @@
       <section class="panel">
         <section class="bg-secondary panel">
            <footer class="bg-secondary bg-bottom bg-cover text-primary body-font mt-24 p-4" style="background-image: url('../public/img/contactbckgrnd.png')">
-             <h1 class ="text-primary text-center text-4xl font-sans">Want to Learn More About VR Training?</h1>
-             <div class="flex flex-col justify-center mt-24">
+             <h1 class ="text-primary text-center text-4xl font-sans xl:mt-12">Want to Learn More About VR Training?</h1>
+             <div class="flex flex-col justify-center mt-32 xl:mt-40">
                 <a class="flex flex-col justify-center" href="/blogs">
-                  <button class="w-1/5 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Check Out Our Blogs</button>
+                  <button class="w-1/4 mx-auto text-white border-solid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg xl:text-3xl">Check Out Our Blogs</button>
                 </a>
                 <p class="mx-auto text-Center text-2xl text-primary text-semibold">-or-</p>
                 <a class="flex flex-col justify-center" href="/contact">
-                <button class=" w-1/5 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg">Reach Out To Us</button>
+                <button class=" w-1/4 mx-auto text-white border-sloid border-2 py-2 px-6 focus:outline-none hover:bg-red-600 text-lg xl:text-3xl">Reach Out To Us</button>
                 </a>
              </div>
              <div class=" container px-5 py-32 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
                <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left md:mt-0 mt-10">
-                 <img class="-mt-2" src="../public/img/vinci-logo.png" alt="">
+                 <img class="-mt-2 xl:mt-20" src="../public/img/vinci-logo.png" alt="">
                </div>
                <div class="flex-grow flex flex-wrap md:pr-20 -mb-10 md:text-left text-center order-first">
                  <div class="lg:w-1/4 md:w-1/2 w-full px-4">
                    <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"></h2>
-                   <nav class="list-none mb-10 -mt-24">
+                   <nav class="list-none mb-10 -mt-24 xl:text-xl xl:-mt-12">
                      <li>
                        <a class="text-primary-600 hover:text-gray-800 cursor-pointer" href="/about">ABOUT</a>
                      </li>
