most recent changes

--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -95,7 +95,7 @@
      <section class="panel">
        <section class="partnersBlock h-screen w-full mb-64">
          <section class="text-gray-700 body-font">
-           <div class="container px-5 mt-16 mx-auto">
+           <div class="container px-5 mt-20 xl:mt-32 mx-auto">
              <div class="text-center mb-20">
                <h1 class=" text-3xl xl:text-4xl font-medium title-font text-gray-900 mb-4 text-primary">Why VINCI?</h1>
                <div class="flex mt-6 justify-center">
@@ -159,7 +159,7 @@
 <!--============== Partners Section =======================-->
       <section class="panel">
         <section class="text-gray-700 body-font bg-secondary object-center">
-          <div class="container px-5 mx-auto">
+          <div class="container px-5 mx-auto xl:mt-32">
             <h2 class="mt-16 text-center title-font font-sans text-4xl font-medium text-primary tracking-wider uppercase">Partners</h2>
             <div class="carousel js-flickity mt-18">
               <div class="carousel-cell border-2 border-gray-200 rounded-lg overflow-hidden m-32">
