--- a/views/about.hbs
+++ b/views/about.hbs
@@ -20,10 +20,10 @@
         <section id="cover" class="bg-no-repeat bg-center bg-cover text-primary panel background cover overflow-hidden w-full h-screen hero-section" style="background-image: url('../public/img/about-cover.png')">
              <header class="text-gray-700 body-font ">
                  <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-                   <a href="/" class="flex items-center mb-4 md:mb-0">
-                     <img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
+                   <a href="/" class="flex items-center mb-4 md:mb-0  xl:-mb-8">
+                     <img class="w-1/6 -mt-2 xl:w-1/4 xl:mt-2" src="../public/img/vinci-logo.png" alt="">
                    </a>
-                   <nav class="md:ml-auto lg:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
+                   <nav class="md:ml-auto lg:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg xl:text-3xl font-semibold">
                      <a href="/about" class="mr-5 hover:text-gray-900">About</a>
                      <a href="/services" class="mr-5 hover:text-gray-900">Solutions</a>
                      <a href="/partners" class="mr-5 hover:text-gray-900">Partners</a>
@@ -34,9 +34,9 @@
                  </div>
              </header>
              <hr class="-mt-4">
-             <h1 class="text-4xl text-center tracking-wider p-2 mt-48 font-sans font-semibold sm:text-4xl md:text-4xl xlg:text-4xl uppercase">ABOUT</h1>
+             <h1 class="text-4xl text-center tracking-wider p-2 mt-48 xl:mt-72 font-sans font-semibold sm:text-4xl md:text-4xl xl:text-5xl uppercase">ABOUT</h1>
              <hr class="coverHr w-1/4 center mx-auto">
-             <div class="tracking-widest text-center pt-1">
+             <div class="tracking-widest text-center pt-1 xl:text-3xl">
                <p>Learn more about VINCI's</p>
                <p>mission, origin and teams</p>
              </div>
