Eagles edits - 2, 5, and 6

--- a/views/blogs.hbs
+++ b/views/blogs.hbs
@@ -19,6 +19,10 @@
 					==================-->
 
 					<style media="screen">
+						body {
+							width: 100vw !important;
+							overflow-x: hidden;
+						}
 			      h1, h2, h3, h4, h5, h6 {
 			        font-family: "Montserrat", sans-serif !important;
 			      }
