--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -10,6 +10,10 @@
   <body class="font-serif">
 
     <style media="screen">
+      body {
+        width: 100vw !important;
+        overflow-x: hidden;
+      }
       h1, h2, h3, h4, h5, h6 {
         font-family: "Montserrat", sans-serif !important;
       }
@@ -218,7 +222,7 @@
            }
            </style>
        </section>
-       
+
        <section id="cover" class="bg-center bg-cover text-primary panel background cover overflow-hidden" style="background-image: url('../public/img/contact-hero-img.png')">
          <header class="text-gray-700 body-font ">
 
