--- a/views/partners.hbs
+++ b/views/partners.hbs
@@ -9,6 +9,10 @@
   </head>
   <body class="font-serif">
     <style media="screen">
+      body {
+        width: 100vw !important;
+        overflow-x: hidden;
+      }
       h1, h2, h3, h4, h5, h6 {
         font-family: "Montserrat", sans-serif !important;
       }
