--- a/views/about.hbs
+++ b/views/about.hbs
@@ -42,13 +42,13 @@
              </div>
           </section>
           <section class="panel bg-secondary">
-              <section class="lg:flex mb-4 ">
+              <section class="lg:flex mb-4 xl:mt-32">
                  <div class="w-3/5 ml-20 m-2 mt-6 p-6 pt-14">
-                     <h2 class ="text-primary font-semibold text-3xl text-left tracking-wider font-sans">
+                     <h2 class ="text-primary font-semibold text-3xl xl:text-4xl text-left tracking-wider font-sans">
                          A Note From VINCI
                      </h2>
                      <hr class="mt-4">
-                     <p class="text-primary text-left mt-6 tracking-widest leading-8">
+                     <p class="text-primary text-left mt-6 tracking-widest leading-8 xl:text-2xl">
                        Virtual Reality is one of the greatest communication and knowledge transfer
                        tools ever invented. But before its benefits can be fully realized,
                        the barrier to create simulations must be overcome.
@@ -59,7 +59,7 @@
                        to create their own.
                       </p>
                  </div>
-                 <div class="w-2/5 p-12">
+                 <div class="w-2/5 p-14 xl:p-4">
                      <div class="imgSize1A">
                          <!-- <img id="vitruve" class="object-cover h-full mt-6" src="../public/img/vitruve.jpg" alt=""> -->
                      </div>
@@ -69,9 +69,9 @@
 
          <section class="lg:flex pb-6 mb-4 text-primary panel bg-secondary">
            <div class="w-3/5 ml-20 m-2 mt-6 p-6 pt-14">
-             <h2 class="text-primary font-semibold text-3xl text-left tracking-wider font-sans"> Origins </h2>
+             <h2 class="text-primary font-semibold text-3xl xl:text-4xl text-left tracking-wider font-sans"> Origins </h2>
              <hr class="mt-4">
-             <p class="pb-4 text-primary text-left mt-6 tracking-widest leading-6">600 years ago, Leonardo da Vinci was filling the pages of his CODEX notebooks with fascinating observations and inventions such as the human brain and optics.
+             <p class="pb-4 text-primary text-left mt-6 tracking-widest leading-6 xl:text-2xl">600 years ago, Leonardo da Vinci was filling the pages of his CODEX notebooks with fascinating observations and inventions such as the human brain and optics.
              <br><br>
              Vinci's world was not only brilliant, but was also well documented; highly detailed sketches accompanied diagrams and astute observations. Read the CODEX Leicester here.VINCI creates tools to lower the complexity, knowledge, and cost needed to create and manage Virtual Reality simulations. Through our innovations, we will enable a new generation of thinkers, creators, and instructors to create their own.
              <br><br>
@@ -92,8 +92,8 @@
                  <div class="container pr-8 pl-4 py-24 mx-auto">
                    <div class="flex flex-col text-center w-full mb-20">
                    <!--Come back here later to practice responsive-->
-                   <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-primary font-sans">Our Team</h1>
-                     <p class="lg:w-2/3 mx-auto leading-relaxed text-base text-primary">Click an image to learn more about our team members.</p>
+                   <h1 class="sm:text-3xl text-2xl xl:text-4xl font-medium title-font mb-4 text-primary font-sans">Our Team</h1>
+                     <p class="lg:w-2/3 mx-auto leading-relaxed text-base text-primary xl:text-2xl ">Click an image to learn more about our team members.</p>
                    </div>
                    <div class="flex flex-wrap -m-2">
 
