Adjust codex button sizing

--- a/views/indexnew.hbs
+++ b/views/indexnew.hbs
@@ -88,7 +88,7 @@
                   </p>
 
                   <a id="learnMore" class="btn uppercase border p-4 hover:bg-gray-100 hover:opacity-3 hover:text-gray-600 sm:text-sm lg:text-sm sm:ml-1 sm:-my-4 sm:block md:ml-1 md:mt-10 lg:ml-1 lg:mt-32 xl:mt-40"  style="width:50%;"  href="/services">
-                    <span class="text-center pl-8 xl:px-auto xl:text-xl">LEARN MORE ABOUT CODEX </span>
+                    <p class="text-center xl:px-auto xl:text-xl">LEARN MORE ABOUT CODEX </p>
                   </a>
              </div>
              <div class="w-2/5 p-12">
