--- a/views/about.hbs
+++ b/views/about.hbs
@@ -46,7 +46,7 @@
              </div>
           </section>
           <section class="panel bg-secondary">
-              <section class="lg:flex mb-4 xl:mt-32">
+              <section class="lg:flex mb-4 xl:mt-24">
                  <div class="w-3/5 ml-20 m-2 mt-6 p-6 pt-14">
                      <h2 class ="text-primary font-semibold text-3xl xl:text-4xl text-left tracking-wider font-sans">
                          A Note From VINCI
@@ -71,24 +71,26 @@
                </section>
          </section>
 
-         <section class="lg:flex pb-6 mb-4 text-primary panel bg-secondary">
-           <div class="w-3/5 ml-20 m-2 mt-6 p-6 pt-14">
-             <h2 class="text-primary font-semibold text-3xl xl:text-4xl text-left tracking-wider font-sans"> Origins </h2>
-             <hr class="mt-4">
-             <p class="pb-4 text-primary text-left mt-6 tracking-widest leading-6 xl:text-2xl">600 years ago, Leonardo da Vinci was filling the pages of his CODEX notebooks with fascinating observations and inventions such as the human brain and optics.
-             <br><br>
-             Vinci's world was not only brilliant, but was also well documented; highly detailed sketches accompanied diagrams and astute observations. Read the CODEX Leicester here.VINCI creates tools to lower the complexity, knowledge, and cost needed to create and manage Virtual Reality simulations. Through our innovations, we will enable a new generation of thinkers, creators, and instructors to create their own.
-             <br><br>
-             Vinci is fascinating because of his ability to share complex worlds with such detail and realism; CODEX's ability to perfectly capture new worlds is unparalleled.
-             <br><br>
-             Inspired by Vinci, we at VINCI aim to transform the way we communicate and educate the world through a new medium: Virtual Reality.
-             </p>
-           </div>
-           <div class="w-2/5 p-12">
-               <div class="imgSize2A">
-                   <!-- <img class="object-cover lg:h-full mt-6" src="../public/img/leo.png" alt="picture of davinci"> -->
-               </div>
-           </div>
+         <section class="panel bg-secondary">
+           <section class="lg:flex pb-6 mb-4 text-primary xl:mt-24">
+             <div class="w-3/5 ml-20 m-2 mt-6 p-6 pt-14">
+               <h2 class="text-primary font-semibold text-3xl xl:text-4xl text-left tracking-wider font-sans"> Origins </h2>
+               <hr class="mt-4">
+               <p class="pb-4 text-primary text-left mt-6 tracking-widest leading-6 xl:text-2xl">600 years ago, Leonardo da Vinci was filling the pages of his CODEX notebooks with fascinating observations and inventions such as the human brain and optics.
+                 <br><br>
+                 Vinci's world was not only brilliant, but was also well documented; highly detailed sketches accompanied diagrams and astute observations. Read the CODEX Leicester here.VINCI creates tools to lower the complexity, knowledge, and cost needed to create and manage Virtual Reality simulations. Through our innovations, we will enable a new generation of thinkers, creators, and instructors to create their own.
+                 <br><br>
+                 Vinci is fascinating because of his ability to share complex worlds with such detail and realism; CODEX's ability to perfectly capture new worlds is unparalleled.
+                 <br><br>
+                 Inspired by Vinci, we at VINCI aim to transform the way we communicate and educate the world through a new medium: Virtual Reality.
+               </p>
+             </div>
+             <div class="w-2/5 p-12">
+                <div class="imgSize2A">
+                    <!-- <img class="object-cover lg:h-full mt-6" src="../public/img/leo.png" alt="picture of davinci"> -->
+                  </div>
+                </div>
+              </section>
          </section>
 
          <section class=" mb-4 text-primary panel bg-secondary">
@@ -96,7 +98,7 @@
                  <div class="container pr-8 pl-4 py-24 mx-auto">
                    <div class="flex flex-col text-center w-full mb-20">
                    <!--Come back here later to practice responsive-->
-                   <h1 class="sm:text-3xl text-2xl xl:text-4xl font-medium title-font mb-4 text-primary font-sans">Our Team</h1>
+                   <h1 class="sm:text-3xl text-2xl xl:text-4xl font-medium title-font mb-4 text-primary font-sans xl:mt-10">Our Team</h1>
                      <p class="lg:w-2/3 mx-auto leading-relaxed text-base text-primary xl:text-2xl ">Click an image to learn more about our team members.</p>
                    </div>
                    <div class="flex flex-wrap -m-2">
@@ -113,7 +115,7 @@
 
                         <div class="col">
                            <div class="modalBlock h-full flex items-center border-gray-200 border p-4 rounded-lg hover:bg-red-700 cursor-pointer" onclick="openLightbox();toSlide(1)" class="hover-shadow preview">
-                             <img id="myImg" alt="" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/eagle.png">
+                             <img id="myImg" alt="" class="myImages w-16 h-16 xl:w-24 xl:h-24 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/eagle.png">
                              <div id="myModal" class="modal">
                                <span class="close">&times;</span>
                                <img class="modal-content" id="img01">
@@ -129,8 +131,8 @@
                                </div>
                              </div>
                              <div class="flex-grow">
-                               <h2 class="text-primary title-font font-medium">Eagle Wu</h2>
-                               <p class="text-third">Business Dev</p>
+                               <h2 class="text-primary title-font font-medium xl:text-2xl">Eagle Wu</h2>
+                               <p class="text-third xl:text-2xl">Business Dev</p>
                              </div>
                            </div>
                         </div>
@@ -139,7 +141,7 @@
 
                         <div class="col">
                           <div class="modalBlock h-full flex items-center border-gray-200 border p-4 rounded-lg hover:bg-red-700 cursor-pointer" onclick="openLightbox();toSlide(2)" class="hover-shadow preview">
-                            <img id="myImg" alt="" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/tim.png">
+                            <img id="myImg" alt="" class="myImages w-16 h-16 xl:w-24 xl:h-24 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/tim.png">
                             <div id="myModal" class="modal">
                               <span class="close">&times;</span>
                               <img class="modal-content" id="img01">
@@ -153,8 +155,8 @@
                               </div>
                             </div>
                             <div class="flex-grow">
-                              <h2 class="text-primary title-font font-medium">Tim Clancy</h2>
-                              <p class="text-third">Engineer</p>
+                              <h2 class="text-primary title-font font-medium xl:text-2xl">Tim Clancy</h2>
+                              <p class="text-third xl:text-2xl">Engineer</p>
                             </div>
                           </div>
                         </div>
@@ -164,7 +166,7 @@
 
                         <div class="col">
                           <div class="modalBlock h-full flex items-center border-gray-200 border p-4 rounded-lg hover:bg-red-700 cursor-pointer" onclick="openLightbox();toSlide(3)" class="hover-shadow preview">
-                            <img id="myImg" alt="" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/liam.png">
+                            <img id="myImg" alt="" class="myImages w-16 h-16 xl:w-24 xl:h-24 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/liam.png">
                             <div id="myModal" class="modal">
                               <span class="close">&times;</span>
                               <img class="modal-content" id="img01">
@@ -178,8 +180,8 @@
                               </div>
                             </div>
                             <div class="flex-grow">
-                              <h2 class="text-primary title-font font-medium">Liam Clancy</h2>
-                              <p class="text-third">Developer</p>
+                              <h2 class="text-primary title-font font-medium xl:text-2xl">Liam Clancy</h2>
+                              <p class="text-third xl:text-2xl">Developer</p>
                             </div>
                           </div>
                         </div>
@@ -191,7 +193,7 @@
                         <div class="row m-4">
                           <div class="col">
                             <div class="modalBlock h-full flex items-center border-gray-200 border p-4 rounded-lg hover:bg-red-700 cursor-pointer" onclick="openLightbox();toSlide(4)" class="hover-shadow preview">
-                              <img id="myImg" alt="" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/matt.png">
+                              <img id="myImg" alt="" class="myImages w-16 h-16 xl:w-24 xl:h-24 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/matt.png">
                               <div id="myModal" class="modal">
                                 <span class="close">&times;</span>
                                 <img class="modal-content" id="img01">
@@ -205,8 +207,8 @@
                                 </div>
                               </div>
                               <div class="flex-grow">
-                                <h2 class="text-primary title-font font-medium">Matthew Oh</h2>
-                                <p class="text-third">Business Dev Analyst</p>
+                                <h2 class="text-primary title-font font-medium xl:text-2xl">Matthew Oh</h2>
+                                <p class="text-third xl:text-2xl">Business Dev Analyst</p>
                               </div>
                             </div>
                         </div>
@@ -216,7 +218,7 @@
 
                         <div class="col">
                           <div class="modalBlock h-full flex items-center border-gray-200 border p-4 rounded-lg hover:bg-red-700 cursor-pointer" onclick="openLightbox();toSlide(5)" class="hover-shadow preview">
-                            <img id="myImg" alt="" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/img1.png">
+                            <img id="myImg" alt="" class="myImages w-16 h-16 xl:w-24 xl:h-24 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/img1.png">
                             <div id="myModal" class="modal">
                               <span class="close">&times;</span>
                               <img class="modal-content" id="img01">
@@ -230,8 +232,8 @@
                               </div>
                             </div>
                             <div class="flex-grow">
-                              <h2 class="text-primary title-font font-medium">Sloan Poelman</h2>
-                              <p class="text-third">3D modeler</p>
+                              <h2 class="text-primary title-font font-medium xl:text-2xl">Sloan Poelman</h2>
+                              <p class="text-third xl:text-2xl">3D modeler</p>
                             </div>
                           </div>
                         </div>
@@ -240,7 +242,7 @@
                       ================================================================-->
                         <div class="col">
                           <div class="modalBlock h-full flex items-center border-gray-200 border p-4 rounded-lg hover:bg-red-700 cursor-pointer" onclick="openLightbox();toSlide(6)" class="hover-shadow preview">
-                            <img id="myImg" alt="" class="myImages w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/laura.png">
+                            <img id="myImg" alt="" class="myImages w-16 h-16 xl:w-24 xl:h-24 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="../public/img/laura.png">
                             <div id="myModal" class="modal">
                               <span class="close">&times;</span>
                               <img class="modal-content" id="img01">
@@ -254,8 +256,8 @@
                               </div>
                             </div>
                             <div class="flex-grow">
-                              <h2 class="text-primary title-font font-medium">Laura Prados-Bacó</h2>
-                              <p class="text-third">Marketing</p>
+                              <h2 class="text-primary title-font font-medium xl:text-2xl">Laura Prados-Bacó</h2>
+                              <p class="text-third xl:text-2xl">Marketing</p>
                             </div>
                           </div>
                         </div>
