--- a/views/services.hbs
+++ b/views/services.hbs
@@ -31,10 +31,10 @@
 
             <header class="text-gray-700 body-font ">
                 <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-                  <a href="/" class="flex items-center mb-4 md:mb-0">
-                    <img class="w-1/6 -mt-2" src="../public/img/vinci-logo.png" alt="">
+                  <a href="/" class="flex items-center mb-4 md:mb-0 xl:-mb-8">
+                    <img class="w-1/6 xl:w-1/4 xl:mt-2 -mt-2" src="../public/img/vinci-logo.png" alt="">
                   </a>
-                  <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg font-semibold">
+                  <nav class="md:ml-auto flex flex-wrap items-center z-10 text-base justify-center text-primary text-lg xl:text-3xl font-semibold">
                     <a href="/about" class="mr-5 hover:text-gray-900">About</a>
                     <a href="/services" class="mr-5 hover:text-gray-900">Solutions</a>
                     <a href="/partners" class="mr-5 hover:text-gray-900">Partners</a>
@@ -47,8 +47,8 @@
             <hr class="-mt-4">
 
 
-              <h1 class="text-left tracking-wider p-4 mt-50 -mb-4 ml-50 sm:text-4xl md:text-4xl xlg:text-4xl uppercase font-sans font-semibold">Codex</h1>
-              <div class="tracking-widest text-left p-4 ml-50">
+              <h1 class="text-left tracking-wider p-4 mt-50 xl:mt-72 -mb-4 ml-50 sm:text-4xl md:text-4xl xl:text-5xl uppercase font-sans font-semibold">Codex</h1>
+              <div class="tracking-widest text-left xl:text-3xl p-4 ml-50">
                 <p>Access the entire codex suite or</p>
                 <p>pick and choose which toolkits to use.</p>
               </div>
@@ -57,9 +57,9 @@
 
         <section class="panel bg-secondary">
           <section class="  text-lg p-12 bg-secondary md:p-20 lg:p-20">
-            <h2 class="text-4xl text-left py-4 mx-4 font-medium font-sans">Educate Your Workforce Like Never Before</h2>
+            <h2 class="text-4xl text-left py-4 mx-4 font-medium font-sans xl:text-4xl xl:mt-32">Educate Your Workforce Like Never Before</h2>
             <hr class=" w-3/4 py-4 font-thin mx-4">
-            <section class="tracking-widest text-left mx-4">
+            <section class="tracking-widest text-left xl:text-2xl mx-4">
               <p>
                 Instructors face limited time, high costs, and potential hazards during high consequence training. These limitations create a gap between the amount of time/repetitions needed for effective knowledge retention and the available opportunities to train.
               </p>
@@ -78,10 +78,10 @@
         <section class="panel bg-secondary">
           <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
             <section class="-ml-2 w-2/3">
-              <h2 class="text-3xl font-medium uppercase py-4 text-left font-sans">Codex Authoring</h2>
-              <hr>
-              <h4 class="text-xl font-medium my-4">Fully Customize Your Simulations</h4>
-              <ul class="text-md">
+              <h2 class="text-3xl font-medium uppercase py-4 text-left font-sans xl:text-4xl xl:mt-32">Codex Authoring</h2>
+              <hr class="xl:w-3/4">
+              <h4 class="text-xl xl:text-3xl font-medium my-4">Fully Customize Your Simulations</h4>
+              <ul class="text-md xl:text-2xl">
                 <li class="tracking-wider leading-loose">
                   Fully customize simulations, such as interactions, instructional content, and training manuals as easily as Powerpoint.
                 </li>
@@ -103,10 +103,10 @@
         <section class="panel bg-secondary">
           <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
             <section class="-ml-2 w-2/3">
-              <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Codex Simulator</h1>
-              <hr>
-              <h4 class="text-xl font-medium my-4">Highly Realistic, Interactive VR</h4>
-              <ul>
+              <h1 class="text-3xl font-medium uppercase py-4 text-left font-sans xl:text-4xl xl:mt-32">Codex Simulator</h1>
+              <hr class="w-3/4">
+              <h4 class="text-xl xl:text-3xl font-medium my-4">Highly Realistic, Interactive VR</h4>
+              <ul class="text-md xl:text-2xl">
                 <li class="tracking-wider leading-loose">
                   Train in highly Realistic 3D environments of simulations created in Codex Authoring.
                 </li>
@@ -129,10 +129,10 @@
           <section class="panel bg-secondary">
             <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
               <section class="-ml-2 w-2/3 ">
-                <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Codex Analytics</h1>
-                <hr>
-                <h4 class="text-xl font-medium my-4">Robust Data Analytics</h4>
-                <ul>
+                <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans xl:text-4xl xl:mt-32">Codex Analytics</h1>
+                <hr class="w-3/4">
+                <h4 class="text-xl xl:text-3xl font-medium my-4">Robust Data Analytics</h4>
+                <ul class="text-md xl:text-2xl">
                   <li class="tracking-wider leading-loose">
                       Live stream multiple student views as they train in VR.
                   </li>
@@ -153,10 +153,10 @@
           <section class="panel bg-secondary">
             <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
               <section class="-ml-2 w-2/3 ">
-                <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Leverage low-cost VR</h1>
-                <hr>
+                <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans xl:text-4xl xl:mt-32">Leverage low-cost VR</h1>
+                <hr class="w-3/4">
                 <h4 class="text-xl font-medium my-4"></h4>
-                <ul>
+                <ul class="text-md xl:text-2xl">
                   <li class="tracking-wider leading-loose">
                     Realistic training at 10% of the cost physical simulators and enable more than 10X the number of repetitions.
                   </li>
@@ -177,10 +177,10 @@
           <section class="panel bg-secondary">
             <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
               <section class="-ml-2 w-2/3 ">
-                <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Leverage low-cost VR</h1>
-                <hr>
+                <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans xl:text-4xl xl:mt-32">Leverage low-cost VR</h1>
+                <hr class="w-3/4">
                 <h4 class="text-xl font-medium my-4"></h4>
-                <ul>
+                <ul class="text-md xl:text-2xl">
                     <li class="tracking-wider leading-loose">
                         Utilize smart insights from codex analytics to tailor training content to individual students.
                     </li>
@@ -198,10 +198,10 @@
           <section class="panel bg-secondary">
             <section class="authoring lg:flex m-auto md:p-20 lg:p-20">
               <section class="-ml-2 w-2/3 ">
-                <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans">Scalable Collaboration</h1>
-                <hr>
+                <h1 class="text-3xl font-semibold uppercase py-4 text-left font-sans xl:text-4xl xl:mt-32">Scalable Collaboration</h1>
+                <hr class="w-3/4">
                 <h4 class="text-xl font-medium my-4"></h4>
-                <ul>
+                <ul class="text-md xl:text-2xl">
                     <li class="tracking-wider leading-loose">
                       Enable an ecosystem of content by empowering your team to innovate and create.
                     </li>
